--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="#">About</a>
+        <a href="index.html" target="_blank">About</a>
         <a href="Foodsafetycharts.html" target="_blank">Food Safety Charts</a>
         <a href="KeepFoodSafe.html" target="_blank">Keep Food Safe</a>
         <a href="FoodPoisioning.html" target="_blank">Food Poisioning</a>
