--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Food Resource Production</title>
@@ -13,7 +12,7 @@
     </header>
 
     <nav>
-        <a href="index.html" target="_blank">About</a>
+        <a href="index.html">About</a>
         <a href="Foodsafetycharts.html" target="_blank">Food Safety Charts</a>
         <a href="KeepFoodSafe.html" target="_blank">Keep Food Safe</a>
         <a href="FoodPoisioning.html" target="_blank">Food Poisioning</a>
