--- a/coldfoodstorage.html
+++ b/coldfoodstorage.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cold Food Storage Charts</title>
     <link rel="stylesheet" href="styles.css">
@@ -13,11 +12,11 @@
     </header>
 
     <nav>
-        <a href="#">About</a>
-        <a href="#">Keep Food Safe</a>
-        <a href="#">Food Poisioning</a>
+        <a href="index.html">About</a>
+        <a href="KeepFoodSafe.html">Keep Food Safe</a>
+        <a href="FoodPoisioning.html">Food Poisioning</a>
         <a href="#">People at risk</a>
-        <a href="#">Food Safety Charts</a>
+        <a href="Foodsafetycharts.html">Food Safety Charts</a>
     </nav>
 
 
