--- a/Foodsafetycharts.html
+++ b/Foodsafetycharts.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Food Safety Charts</title>
   <link rel="stylesheet" href="Foodsafetycharts.css">
@@ -13,7 +12,7 @@
     <h1>Food Resource Production</h1>
   </header>
   <nav>
-    <a href="#">About</a>
+    <a href="index.html">About</a>
     <a href="Foodsafetycharts.html" target="_blank">Food Safety Charts</a>
     <a href="KeepFoodSafe.html" target="_blank">Keep Food Safe</a>
     <a href="FoodPoisioning.html" target="_blank">Food Poisioning</a>
