--- a/FoodPoisioning.html
+++ b/FoodPoisioning.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FoodPoisioning.css">
     <title>Food Poisioning</title>
@@ -13,7 +12,7 @@
     </header>
 
     <nav>
-        <a href="#">About</a>
+        <a href="index.html">About</a>
         <a href="Foodsafetycharts.html" target="_blank">Food Safety Charts</a>
         <a href="KeepFoodSafe.html" target="_blank">Keep Food Safe</a>
         <a href="#">Food Poisioning</a>
