--- a/4simplesteps.html
+++ b/4simplesteps.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>4 Steps to Food Safety</title>
   <link rel="stylesheet" href="4simplesteps.css">
@@ -13,11 +12,11 @@
     <h1>Food Resource Production</h1>
   </header>
   <nav>
-    <a href="#">About</a>
-    <a href="#">Keep Food Safe</a>
-    <a href="#">Food Poisioning</a>
-    <a href="#">People at risk</a>
-    <a href="#">Food Safety Charts</a>
+    <a href="index.html">About</a>
+    <a href="KeepFoodSafe.html">Keep Food Safe</a>
+    <a href="FoodPoisioning.html">Food Poisioning</a>
+    <a href="">People at risk</a>
+    <a href="Foodsafetycharts.html">Food Safety Charts</a>
 </nav>
 
   <section class="main-content">
